--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,8 +1,9 @@
-<h1>Blogs#index</h1>
+<div class="body">
+<h1>行った観光地カレンダー</h1>
 
 <p id="notice"><%= notice %></p>
 
-<h1>自分の日記</h1>
+<h1>いつどこの観光地に行った？</h1>
 
 <%= link_to "メインへ", :controller => "tourists", :action => "index" %>
 
@@ -44,3 +45,4 @@
 
 
 <p>Find me in app/views/blogs/index.html.erb</p>
+</div>
