--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,51 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+div.slide-show {
+    width: 640px; 
+    max-width: 100%; 
+    margin: 10px auto; 
+    position: relative;
+    }
+
+.slide-show img {
+    animation: show 12s infinite; 
+    max-width: 100%;
+    height: auto;
+    opacity: 0;       
+    position: absolute; 
+    left: 0;
+    top: 0;
+    }
+
+@keyframes show {
+    0% {opacity: 0}
+    17% {opacity: 1}
+    33% {opacity: 1}
+    50% {opacity: 0}
+    }
+
+.slide-show img:nth-of-type(1) {
+    position: relative;
+    }
+        
+.slide-show img:nth-of-type(2) {
+    animation-delay: 0s;
+    }
+        
+.slide-show img:nth-of-type(3) {
+    animation-delay: 4s;
+    }
+        
+.slide-show img:nth-of-type(4) {
+    animation-delay: 8s;
+    }
+
+.quote{
+    color: aquamarine;
+    }
+
+.login{
+    color: aquamarine;
+}
