--- a/app/views/tourists/show.html.erb
+++ b/app/views/tourists/show.html.erb
@@ -1,9 +1,10 @@
-<h1>touristsite</h1>
-<h3>Tourist詳細</h3>
+<div class="details">
+
+<h1>投稿詳細</h1>
+<h3>投稿したことの詳細です！</h3>
 <div class="tourist">
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/<%= find_youtube_url(@tourist.youtube_url) %>" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
 
 
   <p><%= @tourist.name %></p>
@@ -14,7 +15,7 @@
   <p><%= @tourist.updated_at %></p>
   <p><%= @tourist.created_at %></p>
   <p><%= @tourist.user_id %></p>
-  <p><%= @tourist.image %></p>
+  <p><%= image_tag @tourist.image_url, size: "250x200" if @tourist.image? %></p>
 
   <div class="tourist">
   <p><%= @tourist.name %></p>
@@ -25,7 +26,7 @@
   <p><%= @tourist.updated_at %></p>
   <p><%= @tourist.created_at %></p>
   <p><%= @tourist.user_id %></p>
-  <p><%= @tourist.image %></p>
+  <p><%= image_tag @tourist.image_url, size: "250x200" if @tourist.image? %></p>
 
     <% if user_signed_in? %>
       <% if current_user.already_liked?(@tourist) %>
@@ -43,7 +44,7 @@
      <i class="far fa-heart"></i><%= @tourist.likes.count %>
       <p>いいねの数 = </p><%= @tourist.likes.count %>
     <% end %>
-  <%= link_to "編集する", edit_tourist_path(@tourist.id) %>
+  <%= link_to "編集する", edit_admin_tourist_path(@tourist.id) %>
   </div>
 </div>
 
@@ -52,5 +53,27 @@
   <li><%= user.email %></li>
 <% end %>
 
+<div class="comment-wrapper">
+  <p>コメント一覧</p>
+  <% @comments.each do |c| %>
+    <div>
+      <%= c.user.email unless c.user.blank? %>
+      <br>
+      <%= c.content %>
+    </div>
+      <br>
+  <% end %>
+
+  <% if user_signed_in? %>
+    <%= form_with(model: [@tourist, @comment], local: true) do |f| %>
+      <%= f.text_area :content %>
+      <%= button_tag type: "submit" do %>
+        <i class="far fa-comments"></i> コメントする
+      <% end %>
+    <% end %>
+  <% end %>
+</div>
+
 
 <%= link_to "Tourist一覧に戻る", tourists_path %>
+</div>
