--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
-<h1>users#show</h1>
+<div class="mypage">
+<h1>観光地従事者向けユーザー　マイページ　登録されていない方は投稿できません。</h1>
 
 <h3>Tourist詳細</h3>
 
@@ -12,6 +13,7 @@
 
 <% if current_user.id == @user.id %>
   <%= link_to "編集する", edit_user_registration_path %>
+   
 <% end %>
 
 <h2>ユーザーの投稿一覧</h2>
@@ -26,3 +28,4 @@
 <% end %>
 
 <%= link_to "Tourist一覧に戻る", tourists_path %>
+</div>
