自由にわかりやすいメッセージ

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="mypage">
-<h1>観光地従事者向けユーザー　マイページ　登録されていない方は投稿できません。</h1>
+<h1>観光地従事者向けユーザー　マイページ　登録されていない方は編集・投稿できません。</h1>
 
 <h3>Tourist詳細</h3>
 
